# aw-watcher-gnome

./: README.md  aw-watcher-gnome.spec  pyproject.toml
aw_watcher_gnome/: __main__.py  config.py  watcher.py  windows.py
systemd/: aw-server.service  aw-watcher-gnome.service
